--- a/styles/style.css
+++ b/styles/style.css
@@ -13,16 +13,26 @@ header img {
   border-radius: 100%;
   float: center;
 }
+
 #navbar {
   background-color: #333;
   position: fixed;
   top: -50px;
   width: 100%;
+  display: block;
+  transition: top 0.3s;
+}
+
+#about-navbar {
+  background-color: #333;
+  position: fixed;
+  top: 0px;
+  width: 100%;
   display:block;
   transition: top 0.3s;
 }
 
-#navbar a {
+#navbar, #about-navbar a {
   float: left;
   display: block;
   color: #f2f2f2;
@@ -32,11 +42,20 @@ header img {
   font-size: 17px;
 }
 
-#navbar a:hover {
+#navbar, #about-navbar a:hover {
   background-color: #ddd;
   color: black;
   color: #cca300;
 }
+
+/*nav a img {
+  width: 50%;
+  height: 50%;
+  background: #333;
+  display; inline;
+  padding: -50px -220px;
+  margin: -10px -220px;
+}*/
 
 p {
   padding: 15px;
