--- a/styles/style.css
+++ b/styles/style.css
@@ -5,6 +5,11 @@ body {
   font-family: Anaheim;
 }
 
+.container {
+  display: flex;
+  justify-content: center;
+}
+
 h1 {
   font-size: 5.0em;
   position: relative;
@@ -42,10 +47,10 @@ main article ul {
 #navbar {
   background-color: #333;
   position: fixed;
-  top: -3.2em;
+  top: -3.2vw;
   width: 100%;
   display: flex;
-  justify-content: flex-end;
+  justify-content: flex-start;
   transition: top 0.5s;
 }
 
