--- a/styles/main.css
+++ b/styles/main.css
@@ -9,6 +9,9 @@ body, html {
 nav {
   width: 100vw;
   height: 7vh;
+  position: fixed;
+  background-color: #f1f1f1;
+  z-index: 10;
   display: grid;
   grid-template-columns: 3fr 1fr 1fr 1fr;
   align-items: center;
@@ -17,12 +20,13 @@ nav > a {
   text-decoration: none;
   color: #7B910A;
   margin: auto;
+  font-size: 1.2em;
 }
 
 nav > a:hover {
   color: #f1f1f1;
   background-color: black;
-  padding: 1.09em;
+  padding: 0.8em;
   transition: all 0.1s ease;
 }
 
@@ -46,6 +50,11 @@ nav > a:hover {
 
 #splat h1, #splat sub {
   margin: 0 35vw 3vw 0;
+}
+
+article {
+    text-align: center;
+    font-size: 2em;
 }
 
 #bg2 {
