starter code for Portfolio, with new file for Portfolio css. Included general header css in main.css

--- a/styles/main.css
+++ b/styles/main.css
@@ -31,6 +31,15 @@ nav > a:hover {
 }
 
 /* header */
+header {
+  top: 7vh;
+  min-height: 70vh;
+  position: relative;
+  text-align: center;
+  font-size: 2em;
+}
+
+/* splat */
 #splat {
   background-image: url("../images/franklin.jpg");
   position: relative;
