--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -1,3 +1,37 @@
 body {
-  color: #0A7B91;
+  background-color: #E4DBCC;
+}
+
+header {
+  height: 90vh;
+  width: 100vw;
+  opacity: 0.8;
+  border-top: solid thin black;
+  background-image: url("../images/computer-code.jpg");
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-attachment: fixed;
+}
+
+header div {
+  min-width: 15rem;
+  margin: 30vh 20vw 0 20vw;
+  background-color: black;
+  font-family: 'Ubuntu', sans-serif;
+}
+
+header div sub {
+  font-size: 0.72em;
+}
+
+main article {
+  display: grid;
+  height: 100vw;
+  grid-template-columns: 1fr 1fr;
+  grid-template-rows: 1fr 1fr 1fr;
+}
+
+article > section {
+  border-right: solid thin #7B910A;
 }
