--- a/styles/main.css
+++ b/styles/main.css
@@ -6,9 +6,20 @@ body, html {
   color: black;
 }
 
+/* general links */
+a {
+  text-decoration: none;
+  color: black;
+}
+
+a:visited {
+  color: inherit;
+}
+
 /* navbar for other pages */
 nav {
   background-color: #7B910A;
+  color: #f1f1f1;
   top: 0;
   width: 100vw;
   height: 7vh;
@@ -79,6 +90,11 @@ header h1 {
 article {
     text-align: center;
     font-size: 2em;
+    min-height: 25vh;
+}
+
+article > h4 {
+  padding-top: 1rem;
 }
 
 #bg2 {
