--- a/styles/about.css
+++ b/styles/about.css
@@ -1,4 +1,24 @@
+body {
+  background-color: black;
+  color: white;
+}
+
+
+
 header img {
+  margin-top: 8vw;
   border-radius: 100%;
   height: 50vh;
+}
+
+header p > a {
+  color: #7B910A;
+}
+
+header p > a:visited {
+  color: #7B910A;
+}
+
+header p > a:hover {
+  color: white;
 }
