--- a/styles/main.css
+++ b/styles/main.css
@@ -34,13 +34,29 @@ nav > a {
   color: #f1f1f1;
   text-decoration: none;
   margin: auto;
-  font-size: 1.2em;
+}
+
+@media screen and (min-width: 320px) {
+  nav > a {
+    font-size: calc(1.2em + 6 * ((100vw - 320px) / 680));
+    padding: 0 1rem;
+  }
+
+  nav > a:hover {
+      padding: calc(0.96rem + 1.2rem * ((100vw - 320px) / 680));
+  }
+}
+
+@media screen and (min-width: 1000px) {
+  nav > a {
+    font-size: 1.2em;
+  }
 }
 
 nav > a:hover {
   color: #f1f1f1;
   background-color: black;
-  padding: 0.95rem;
+  padding: 0.96rem;
   transition: all 0.1s ease;
 }
 
