--- a/styles/main.css
+++ b/styles/main.css
@@ -23,6 +23,7 @@ nav {
   top: 0;
   width: 100vw;
   height: 7vh;
+  opacity: 0.9;
   position: fixed;
   display: grid;
   grid-template-columns: 3fr 1fr 1fr 1fr;
