--- a/styles/main.css
+++ b/styles/main.css
@@ -39,24 +39,24 @@ nav > a {
 @media screen and (min-width: 320px) {
   nav > a {
     font-size: calc(1.2em + 6 * ((100vw - 320px) / 680));
-    padding: 0 1rem;
+    padding: 0 0.9em;
   }
 
   nav > a:hover {
-      padding: calc(0.96rem + 1.2rem * ((100vw - 320px) / 680));
+    padding: calc(0.9em + 1.1em * ((100vw - 320px) / 680));
   }
 }
 
 @media screen and (min-width: 1000px) {
   nav > a {
-    font-size: 1.2em;
+    font-size: 1.1em;
   }
 }
 
 nav > a:hover {
   color: #f1f1f1;
   background-color: black;
-  padding: 0.96rem;
+  padding: 0.9em;
   transition: all 0.1s ease;
 }
 
