--- a/styles/main.css
+++ b/styles/main.css
@@ -22,13 +22,18 @@ nav {
   top: 0;
   width: 100vw;
   height: 7vh;
-  opacity: 0.9;
+  opacity: 0.75;
   position: fixed;
   display: grid;
   grid-template-columns: 3fr 1fr 1fr 1fr;
   align-items: center;
   z-index: 10;
 }
+/*@media screen and (min-width: 320px) {
+  nav {
+    height:
+  }
+}*/
 
 nav > a {
   color: #f1f1f1;
